hb-policies/hb-custom-constraints/custom-constraints/require-sandbox-enabled-deployment-constraint.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnableSandbox
metadata: 
  name: require-sandbox-enabled-deployment
spec: 
  enforcementAction: dryrun
  match: 
    kinds: 
      - apiGroups:
          - "*"
        kinds: 
          - Deployment
          - Job
          - Pod
          - DaemonSet
          - StatefulSet
    excludedNamespaces: 
      - config-management-monitoring ## otel-collector
      - config-management-system ## root-reconciler-root-sync-policies and root-reconciler and config-management-operator and reconciler-manager
      - gatekeeper-system ## gatekeeper-audit and gatekeeper-controller-manager
      - gke-connect 
      - kube-node-lease
      - kube-public
      - kube-system ##l7-default-backend and kube-dns and konnectivity-agent and event-exporter-gke and metrics-server-v0.5.2 and kube-dns-autoscaler and konnectivity-agent-autoscaler
      - resource-group-system ##resource-group-controller-manager
  parameters:
    validName: "gvisor"
